# synthetic-rag-index

./: .gitignore  .python-version  Makefile  README.md  function_app.py  host.json  local.example.settings.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pipeline.yaml
examples/1-extract/: code_des_assurances_2024_1.json
examples/2-chunck/: code_des_assurances_2024_1-0.json
examples/3-synthesis/: code_des_assurances_2024_1-0.json
examples/4-page/: code_des_assurances_2024_1-0-0.json  code_des_assurances_2024_1-0-1.json  code_des_assurances_2024_1-0-10.json  code_des_assurances_2024_1-0-11.json  code_des_assurances_2024_1-0-12.json  code_des_assurances_2024_1-0-13.json  code_des_assurances_2024_1-0-14.json  code_des_assurances_2024_1-0-15.json  code_des_assurances_2024_1-0-16.json  code_des_assurances_2024_1-0-17.json  code_des_assurances_2024_1-0-18.json  code_des_assurances_2024_1-0-19.json  code_des_assurances_2024_1-0-2.json  code_des_assurances_2024_1-0-20.json  code_des_assurances_2024_1-0-21.json  code_des_assurances_2024_1-0-22.json  code_des_assurances_2024_1-0-23.json  code_des_assurances_2024_1-0-24.json  code_des_assurances_2024_1-0-25.json  code_des_assurances_2024_1-0-26.json  code_des_assurances_2024_1-0-27.json  code_des_assurances_2024_1-0-28.json  code_des_assurances_2024_1-0-29.json  code_des_assurances_2024_1-0-3.json  code_des_assurances_2024_1-0-30.json  code_des_assurances_2024_1-0-31.json  code_des_assurances_2024_1-0-32.json  code_des_assurances_2024_1-0-33.json  code_des_assurances_2024_1-0-34.json  code_des_assurances_2024_1-0-35.json  code_des_assurances_2024_1-0-36.json  code_des_assurances_2024_1-0-37.json  code_des_assurances_2024_1-0-38.json  code_des_assurances_2024_1-0-39.json  code_des_assurances_2024_1-0-4.json  code_des_assurances_2024_1-0-40.json  code_des_assurances_2024_1-0-41.json  code_des_assurances_2024_1-0-42.json  code_des_assurances_2024_1-0-43.json  code_des_assurances_2024_1-0-44.json  (+25 more)
examples/5-fact/: code_des_assurances_2024_1-0-0.json  code_des_assurances_2024_1-0-13.json  code_des_assurances_2024_1-0-14.json  code_des_assurances_2024_1-0-15.json  code_des_assurances_2024_1-0-16.json  code_des_assurances_2024_1-0-18.json  code_des_assurances_2024_1-0-19.json  (+30 more)
helpers/: file.py  http.py  logging.py  models.py
persistence/: ai_search.py  azure_openai.py  document_intelligence.py  ianalyze.py  iindex.py  illm.py  openai.py
(+50 files in other folders)
